# plannerFamilyBudget

./: .env  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.docker/: Dockerfile  default.conf  docker-compose.yaml
.github/workflows/: pfb-ci.yml
core/: .coveragerc  db.sqlite3  planner.dot
core/accounts/: admin.py  auth.py  factories.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_email_alter_customuser_username.py  0004_profile.py
core/accounts/mixins/: ownership.py
core/accounts/models/: __init__.py  profile.py
core/accounts/tests/: __init__.py  factories.py  test_login.py  test_registration.py
core/bills/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
core/budgetManager/: apps.py  models.py
core/budgets_manager/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py
core/communication/: admin.py  context_processors.py  models.py  tasks.py  urls.py
core/core/: celery.py  env.py  middleware.py  settings.py  urls.py
core/expenses/: admin.py  factories.py  filters.py  forms.py  models.py  tests.py  types.py  urls.py  views.py
core/incomes/: admin.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
core/multi_user/: admin.py  tasks.py  urls.py
core/runningCosts/: admin.py  apps.py  constants.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
core/subscription/: admin.py  apps.py  signals.py  tasks.py  urls.py  utils.py
core/targets/: admin.py  factories.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
core/templates/: index.html  payment.html  payment_failure.html  payment_success.html
(+366 files in other folders)
