[tool.poetry]
name = "plannerfamylybudget"
version = "0.1.0"
description = ""
authors = ["Lizaveta Kaptsilava <126101406+ElaKaptsilava@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
