[tool.poetry]
name = "plannerfamylybudget"
version = "0.1.0"
description = ""
authors = ["Lizaveta Kaptsilava <126101406+ElaKaptsilava@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
conventional-pre-commit = "^3.2.0"
pre-commit-hooks = "^4.6.0"
black = "^24.4.2"
ruff = "^0.4.3"
bandit = "^1.7.8"
isort = "^5.13.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
