[tool.poetry]
name = "plannerfamylybudget"
version = "0.1.0"
description = ""
authors = ["Lizaveta Kaptsilava <126101406+ElaKaptsilava@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
conventional-pre-commit = "^3.2.0"
pre-commit-hooks = "^4.6.0"
black = "^24.4.2"
ruff = "^0.4.3"
bandit = "^1.7.8"
isort = "^5.13.2"
pre-commit = "^3.7.0"
factory-boy = "^3.3.0"
djangorestframework = "^3.15.1"
sentry-sdk = {extras = ["django"], version = "^2.1.1"}
safety = "^3.2.0"
social-auth-app-django = "^5.4.1"
django-crispy-forms = "^2.1"
django-bootstrap4 = "^24.3"
pillow = "^10.3.0"
coverage = "^7.5.1"
django-environ = "^0.11.2"
psycopg = "^3.1.19"
django-filter = "^24.2"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "^4.4.2"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
